ADD a new post: Umbrella

--- a/page-about.html
+++ b/page-about.html
@@ -19,7 +19,7 @@ desc: A brief introduction
 
 <h3>Colophon</h3>
 
-<p>This site is powered by <a href="http://jekyllrb.com/">Jekyll</a>, source code stored at <a href="https://github.com/sparanoid/sparanoid.com">Github</a>. The website and its images and static assets are hosted by <a href="http://aws.amazon.com/s3/">Amazon S3</a> and <a href="http://aws.amazon.com/cloudfront/">CloudFront</a>. It was hosted by my friend <a href="http://astonysh.com/">Tony</a> on DreamHost from 2008 to 2010. This site has undergone several revisions leading up to the current design, which is the 17<sup>th</sup> version. You can get more information on <a href="{% if site.prod %}//{{ site.url }}{% endif %}/work/nite/">this post</a>.</p>
+<p>This site is powered by <a href="http://jekyllrb.com/">Jekyll</a>, source code stored at <a href="https://github.com/sparanoid/sparanoid.com">Github</a>. Images and static assets are hosted by <a href="http://aws.amazon.com/s3/">Amazon S3</a> and <a href="http://aws.amazon.com/cloudfront/">CloudFront</a>. It was hosted by my friend <a href="http://astonysh.com/">Tony</a> on DreamHost from 2008 to 2010. This site has undergone several revisions leading up to the current design, which is the 17<sup>th</sup> version. You can get more information on <a href="{% if site.prod %}//{{ site.url }}{% endif %}/work/nite/">this post</a>.</p>
 
 <p>All posts are &copy; Tunghsiao Liu, all rights reserved. The views expressed on this site are mine alone and not those of my employers and clients, past and present.</p>
 </div>
