--- a/page-error.html
+++ b/page-error.html
@@ -5,4 +5,5 @@ permalink: /error/
 bg: '#fcc'
 ---
 
-<p>Not found, no kidding. <a href={% if site.prod %}//{{ site.url }}{% endif %}/>Go home</a>.</p>
+<p>Not found, no kidding. <a href=/>Go home</a>.</p>
+
