--- a/page-note.html
+++ b/page-note.html
@@ -8,7 +8,10 @@ desc: Random ramblings
 <div class=txt>
 <ul class=pl>
 {% for post in site.categories.note %}
-	<li><a href={{ post.url }}/>{{ post.title }}</a><ins>{{ post.excerpt }}</ins></li>
+  <li>
+    <a href={{ post.url }}/>{{ post.title }}</a>
+    <ins>{{ post.excerpt }}</ins>
+  </li>
 {% endfor %}
 </ul>
 </div>
