fix a work page

--- a/page-about.html
+++ b/page-about.html
@@ -14,7 +14,7 @@ desc: A brief introduction
 	<li><a href="https://github.com/SaitoWu/statemachine">State-Machine Project</a> - an useless library for refactor ur messy if/else business logic.</li>
 </ul>
 
-<p>More small projects please visit <a href="/work/">work</a> page.</p>
+<p>More small projects please visit <a href="https://github.com/SaitoWu/">github</a> page.</p>
 
 <h3>Colophon</h3>
 
