--- a/slide/ruby-new.html
+++ b/slide/ruby-new.html
@@ -356,7 +356,7 @@ hello {puts "hello, block"}
 	</li>
 	<li class="slide">
 <pre><code>Proc中return会跳出当前作用域</code></pre>
-<pre><code>lambda中return不会当前整个作用域</code></pre>
+<pre><code>lambda中return不会跳出当前作用域</code></pre>
 	</li>
 	</ul>
 </section>
