--- a/slide/ruby-new.html
+++ b/slide/ruby-new.html
@@ -482,11 +482,11 @@ Pig.new.sleep
 	</ul>
 </section>
 
-<section class="slide" id="module-variable">
-  <h2>#=> module variable</h2>
+<section class="slide" id="module-constants">
+  <h2>#=> module constants</h2>
   <ul>
 	<li class="slide">
-		<h3>module variable访问:</h3>
+		<h3>module constants访问:</h3>
 	</li>
 	<li class="slide">
 		<pre><code>
@@ -504,7 +504,7 @@ Math::PI
   <h2>#=> module more</h2>
   <ul>
 	<li class="slide">
-		<h3>module include module:</h3>
+		<h3>module namespace:</h3>
 	</li>
 	<li class="slide">
 		<pre><code>
@@ -526,7 +526,7 @@ Foo::Bar.say
   <h2>#=> module more</h2>
   <ul>
 	<li class="slide">
-		<h3>module include class:</h3>
+		<h3>another module namespace:</h3>
 	</li>
 	<li class="slide">
 		<pre><code>
