post sinatra extensions

--- a/slide/git-github-and-gitlab.html
+++ b/slide/git-github-and-gitlab.html
@@ -6,12 +6,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	
+
 	<title>Git Github & Gitlab</title>
-	
+
 	<meta name="author" content="Saito">
 	<meta name="viewport" content="width=1024, user-scalable=no">
-	
+
 	<!-- Core and extension CSS files -->
 	<link rel="stylesheet" href="../public/deck/core/deck.core.css">
 	<link rel="stylesheet" href="../public/deck/extensions/goto/deck.goto.css">
@@ -19,12 +19,12 @@
 	<link rel="stylesheet" href="../public/deck/extensions/navigation/deck.navigation.css">
 	<link rel="stylesheet" href="../public/deck/extensions/status/deck.status.css">
 	<link rel="stylesheet" href="../public/deck/extensions/hash/deck.hash.css">
-	
+
 	<!-- Theme CSS files (menu swaps these out) -->
 	<link rel="stylesheet" id="style-theme-link" href="../public/deck/themes/style/neon.css">
 	<link rel="stylesheet" id="transition-theme-link" href="../public/deck/themes/transition/horizontal-slide.css">
-	
-	
+
+
 	<script src="../public/deck/modernizr.custom.js"></script>
 </head>
 
@@ -128,7 +128,7 @@
 			<h3>file [rw]</h3>
 		</li>
 		<li class="slide">
-			<h3>https [r]</h3>
+			<h3>https [rw]</h3>
 		</li>
 		<li class="slide">
 			<h3>git [r]</h3>
