--- a/page-about.html
+++ b/page-about.html
@@ -10,11 +10,7 @@ desc: A brief introduction
 
 <h3>Projects</h3>
 
-<ul>
-	<li><a href="https://github.com/SaitoWu/statemachine">State-Machine Project</a> - an useless library for refactor ur messy if/else business logic.</li>
-</ul>
-
-<p>More small projects please visit <a href="https://github.com/SaitoWu/">github</a> page.</p>
+<p>More projects please visit <a href="https://github.com/SaitoWu/">github</a> page.</p>
 
 <h3>Colophon</h3>
 
