--- a/page-work.html
+++ b/page-work.html
@@ -6,6 +6,6 @@ desc: coding works, and projects
 ---
 
 <ul class=al>
-{% for post in site.categories.work %}<li><img src="{{ site.file }}/{% if post.thumb %}{{ post.thumb }}{% else %}na.png{% endif %}" alt="{{ post.title }}"><a href={{ post.url }}/>{{ post.title }}</a></li>{% endfor %}
+{% for post in site.categories.work %}<li><img src="{{ site.file }}/{% if post.thumb %}{{ post.thumb }}{% else %}na.png{% endif %}" alt="{{ post.title }}"><a href={{ post.presentation }}>{{ post.title }}</a></li>{% endfor %}
 </ul>
 
